--- a/project/report.bib
+++ b/project/report.bib
@@ -1,32 +1,24 @@
 @Misc{C1,
-  author       = {Hodan M. Musse, Lama A. Alamro},
-  title        = {Cloud Computing: Architecture and Operating System},
+  author       = {Wikipedia},
+  title        = {Linear regression},
   howpublished = {Online},
   month        = {7},
   year         = {2016},
-  url          = {http://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=7976640},
+  url          = {https://en.wikipedia.org/wiki/Linear_regression},
 }
 
 @Misc{C2,
-  author       = {Fabio Pianese,
-			  Peter Bosch,
-			  Alessandro Duminuco,
-			  Nico Janssens,
-		      Thanos Stathopoulos and
-			  Moritz Steiner},
-  title        = {Toward a Cloud Operating System},
+  author       = {Wikipedia},
+  title        = {Logistic regression},
   howpublished = {Online},
-  year         = {2010},
-  url          = {http://ieeexplore.ieee.org/abstract/document/5486552/},
+  year         = {2017},
+  url          = {https://en.wikipedia.org/wiki/Logistic_regression},
 }
 
 @Misc{C3,
-  title        = {VMware vSphere, the First Cloud Operating System, Provides an
-Evolutionary, Non-disruptive Path to Cloud Computing white
-paper},
+  author       = {Lihui Zhao, Yuhuan Chen, Donald W. Schaffner},
+  title        = {Comparison of Logistic Regression and Linear Regression in Modeling Percentage Data},
   howpublished = {Online},
-  year         = {2009},
-  url          = {http://www.vmware.com/content/dam/digitalmarketing/vmware/e
-n/pdf/whitepaper/cloud/vmw-09q2-white-paper-cloud-os-p8-
-r1.pdf},
+  year         = {2001},
+  url          = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC92846/},
 }
